{
    "name": "PlayerControl",
    "maps": [
        {
            "name": "Play",
            "id": "d017ca9b-f421-41f3-a37f-1a5c95ed4361",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "82ad5088-939e-42f3-8742-015637092cd0",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MoveScreen",
                    "type": "Value",
                    "id": "b15aca85-e873-4878-b3b0-096dd779627b",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "106bb435-dc65-4e65-8db3-37893f0526c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "AttackOff",
                    "type": "Button",
                    "id": "9446f8f2-94e2-4d78-ab59-0457420fe234",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Inventory",
                    "type": "PassThrough",
                    "id": "54fc33e5-edf7-45eb-b94f-08ae33d240c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "DashHold",
                    "type": "Button",
                    "id": "0a3cf411-87b2-4f49-8578-f662dcc7fbd4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.02,pressPoint=0.5)"
                },
                {
                    "name": "DashDown",
                    "type": "Button",
                    "id": "91ba58ca-85d7-4e2a-85b2-7c4f1b1972a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "1ded5fed-710c-4f1a-b755-092c712f4cb5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkillWindow",
                    "type": "Button",
                    "id": "be7fe3e8-df4f-4486-85e4-c5c6d4e39e03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "k1",
                    "type": "Button",
                    "id": "9d6e801e-4e2f-405b-a04a-e64200ac569f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "k2",
                    "type": "Button",
                    "id": "b7f31659-078e-485b-a062-142718b118d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "k3",
                    "type": "Button",
                    "id": "313d6587-523a-46b1-94da-edaf64f14e97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "k4",
                    "type": "Button",
                    "id": "9cc6895d-524f-411e-86e2-6c7eb8d72e13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b3d915a9-a200-445f-aa13-df085904baac",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "94d67ad6-2720-4fe7-8447-165537d2fe73",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6c29acb4-d2ce-4b85-ba55-0b17f5a0b435",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3990e7ac-56dc-4e84-9cc0-26f528f941f5",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "ff6be67a-5fb4-4c61-aaa0-da64ea50bb29",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8f780291-f3ad-4bad-a465-c9316f188c39",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "91654843-6db3-4538-9b8c-7022204e6586",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fd2e0ab8-fd87-41c7-82fe-9907a46bd3bc",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e94a0f95-bdc9-444a-b7ea-6024b6b1fb6f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC+CONSOLE",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "451f38d4-f0b6-4423-b9ee-1c0490729fb1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC+CONSOLE",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39913eaa-4210-4488-a3eb-085c1839e18a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6575360f-9ae5-46ac-be34-8193d3e721ea",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC+CONSOLE",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2c50793-7055-458d-aa4a-9c927366878f",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2f5e2cd-7119-43d9-a4f1-a2246d8ffc47",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7791a565-5c04-47bc-ba78-71e5ecaa5b9a",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa5a0ea1-304e-41cc-8fcc-30468e746a08",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7ba47b7-6863-46df-b08e-c76636754d5c",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DashDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2b013f49-e2d1-419a-8fe0-a585121cfe42",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC+CONSOLE",
                    "action": "AttackOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c224e98a-d92c-4542-8e86-927cd9015480",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC+CONSOLE",
                    "action": "AttackOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbff7a54-06c1-4688-b9d7-8389b1b4da48",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC+CONSOLE",
                    "action": "AttackOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7053b14-f08e-4cfd-ab12-b1ca2ea2e37d",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8732a63c-b8af-44af-949e-e4efe925f5fd",
                    "path": "<Keyboard>/l",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "SkillWindow",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2c81c78-7f35-40f3-8013-c42236df5185",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "k1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8bb97169-1284-4262-9345-8610680e007b",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "k1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47083058-a91c-4282-baf9-f0cdce9230ec",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "k2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a67fc522-518a-4717-8f5b-06eabdea91da",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "k3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ff45c03-8f7c-4d31-8fde-51f730857088",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "k4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC+CONSOLE",
            "bindingGroup": "PC+CONSOLE",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}